--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
       </div>
       <button class="get-recommendations-button" data-tab="lime">Get Recommendations</button>
       <ul id="recommendationsLime"></ul>
-      <div id="limeExplanation" style="display:none;">
+      <div id="limeExplanation">
         <h2>LIME Explanations for Recommended Books:<span id="explainedTitleLime"></span></h2>
         <p id="limeExplanationGeneral">These recommendations are formed using the description of your original book and using this to search for similar books.
           The LIME explanation displays the relevant words within the description and the weight of these words.
